# dbt-athena-batch

./: Makefile  README.md  pyproject.toml
.github/workflows/: build-deploy.yaml
my_dbt_project/: .sqlfluff  .sqlfluffignore  Dockerfile  dbt_project.yml  profiles.yml  requirements.txt
my_dbt_project/models/interface/: sample.sql
my_dbt_project/models/mart/: should_be_formatted.sql
my_dbt_project/models/raw/: sample_source.yaml
terraform/: .tflint.hcl  athena.tf  batch.tf  ecr.tf  iam_batch.tf  iam_githubactions.tf  network.tf  provider.tf  s3.tf  sg.tf  vars.tf
terraform/job_definition/: dbt.json
