[tool.poetry]
name = "tmp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.2.0"
dbt-athena-adapter = "^1.0.1"
sqlfluff = "^1.3.0"
sqlfluff-templater-dbt = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
